[project]
name = "cin-scout"
version = "1.0.0"
description = "FastAPI-powered Indian company lookup tool. Search by name, fetch CIN, ROC codes, founding dates & directors from public registries."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
